k8s/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: demo-fastapi
  labels:
    app: demo-fastapi
spec:
  containers:
    - name: demo-fastapi
      image: demo-fastapi:v1
      ports:
        - containerPort: 8000
