k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-fastapi-ingress
spec:
  rules:
    - host: demo-fastapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-fastapi-service
                port:
                  number: 80
